# remacs

./: .appveyor.bat  .arch-inventory  .clang-format  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .osx-deps.sh  .travis-cerrors.sh  .travis-format.sh  .travis.sh  .travis.yml  AUTHORS  BUGS  CONTRIBUTE  CONTRIBUTING.md  CONTRIBUTORS  ChangeLog  ChangeLog.1  ChangeLog.2  ChangeLog.3  ChangeLog.multi-tty  ChangeLog.unicode  Dockerfile32bit  FTP  GETTING.GNU.SOFTWARE  GNUmakefile  INSTALL  INSTALL-CVS  INSTALL.BZR  INSTALL.CVS  INSTALL.REPO  MAINTAINERS  Makefile.in  PROBLEMS  README  README.imagemagick  README.md  README.multi-tty  README.unicode  (+29 more)
.github/: PULL_REQUEST_TEMPLATE.md
admin/: CPP-DEFINES  ChangeLog  ChangeLog.1  ChangeLog.22  ChangeLog.unicode  FOR-RELEASE  MAINTAINERS  README  admin.el  alloc-colors.c  authors.el  automerge  build-configs  bzrmerge.el  check-doc-strings  cus-test.el  diff-tar-files  dir_top  emacs-pretesters  find-gc.el  gitmerge.el  last-chance.el  ldefs-clean.el  make-announcement  make-changelog-diff  make-emacs  make-manuals  make-tarball.txt  merge-gnulib  merge-pkg-config  quick-install-emacs  release-process  revdiff  update-copyright  update_autogen  upload-manuals  versioning
autogen/: Makefile.in  README  aclocal.m4  config.in  configure  copy_autogen  install-sh  update_autogen
build-aux/: config.guess  config.sub  dir_top  gitlog-to-changelog  gitlog-to-emacslog  install-sh  make-info-dir  move-if-change  msys-to-w32  update-copyright  update-subdirs
docker/: Dockerfile.in  README.md  build-it.sh  generate  run-it.sh
etc/: .arch-inventory  .gitignore  AIX.DUMP  AUTHORS  BABYL  CALC-NEWS  CENSORSHIP  CHARSETS  CODINGS  CONTRIBUTE  COOKIES  ChangeLog  ChangeLog.1  ChangeLog.22  ChangeLog.multi-tty  ChangeLog.unicode  DEBUG  DEVEL.HUMOR  DISTRIB  ERC-NEWS  ETAGS.EBNF  ETAGS.README  Emacs.clr  FAQ  FOR-RELEASE  FTP  GNU  GNUS-NEWS  HELLO  HISTORY  INTERVIEW  JOKES  LEDIT  LINUX-GNU  LPF  MACHINES  MAILINGLISTS  MH-E-NEWS  MH-E-ONEWS  MORE.STUFF  (+168 more)
gc/: Makefile.am  Makefile.direct  Makefile.dj  Makefile.in  acinclude.m4  aclocal.m4  alloc.c  configure  configure.host  configure.in  dbg_mlc.c  dyn_load.c  finalize.c  gc_dlopen.c  linux_threads.c  mach_dep.c  mark.c  misc.c  os_dep.c  reclaim.c  threadlibs.c  version.h  win32_threads.c
info/: .arch-inventory  .gitignore  dir  eintr  eintr-1  eintr-2  eintr-3
leim/: .arch-inventory  .gitignore  ChangeLog  ChangeLog.1  ChangeLog.22  ChangeLog.unicode  Makefile.in  README  leim-ext.el  leim-list.el  makefile.nt  makefile.w32-in
lib/: ChangeLog  Makefile.am  Makefile.in  _Noreturn.h  acl-errno-valid.c  acl-internal.c  acl-internal.h  acl.h  acl_entries.c  alloca.in.h  allocator.h  at-func.c  binary-io.c  binary-io.h  byteswap.in.h  c-ctype.c  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  canonicalize-lgpl.c  careadlinkat.c  careadlinkat.h  cdefs.h  cloexec.c  cloexec.h  close-stream.c  copy-file-range.c  count-leading-zeros.c  count-leading-zeros.h  count-one-bits.c  count-one-bits.h  count-trailing-zeros.c  count-trailing-zeros.h  diffseq.h  dirent.in.h  dirfd.c  dosname.h  dtotimespec.c  dummy.c  (+158 more)
lib-src/: .arch-inventory  .gitignore  ChangeLog  ChangeLog.1  ChangeLog.multi-tty  ChangeLog.unicode  Makefile.in  README  aixcc.lex  b2m.c  b2m.pl  ctags.c  cvtmail.c  digest-doc.c  ebrowse.c  (+42 more)
rust_src/: .gitignore  Cargo.toml  Cargo.toml.in  README.md  build.rs  rust-toolchain  rustfmt.helper.sh  rustfmt.toml  wrapper.h
rust_src/admin/: .gitignore  build-and-run-remacs.sh  did-it-work.sh  pre-commit  remacs-helpers-tests.el  remacs-helpers.el  run-tests.sh  rustize-emacs  setup-tests.sh
rust_src/admin/rollups/: both-modified  build-and-test  cleanup  deleted-by-us  rollup
rust_src/alloc_unexec/: Cargo.toml
rust_src/alloc_unexec/src/: lib.rs
rust_src/alloc_unexecmacosx/: Cargo.toml
rust_src/alloc_unexecmacosx/src/: lib.rs
rust_src/remacs-bindings/: Cargo.toml
rust_src/remacs-bindings/src/: main.rs
rust_src/remacs-codegen/: Cargo.toml  build.rs
rust_src/remacs-codegen/lisp-mock/: lib.rs
rust_src/remacs-codegen/src/: lib.rs
rust_src/remacs-codegen/src/decorators/: mod.rs
rust_src/remacs-codegen/src/parser/: function.rs  keyvalue.rs  lisp_function.rs  mod.rs
rust_src/remacs-codegen/src/utils/: arg_ext.rs  ident_ext.rs  meta_item_ext.rs  mod.rs  span_ext.rs
rust_src/remacs-codegen/tests/: tests.rs
rust_src/remacs-codegen/tests/compile-fail/: bad_argument.rs  min_is_too_large.rs  missing_arguments.rs  no_arguments.rs  should_be_integer.rs
rust_src/remacs-codegen/tests/run-pass/: symbolp.rs
rust_src/remacs-lib/: Cargo.toml  README.md  attributes.rs  docfile.rs  files.rs  lib.rs  math.rs  time.rs
rust_src/remacs-macros/: Cargo.toml  README.md  function.rs  lib.rs  lisp_attr.rs
rust_src/remacs-macros/tests/: lisp_attr_parse.rs
rust_src/remacs-modules/: Cargo.toml  lib.rs
rust_src/remacs-modules/examples/: Cargo.toml
rust_src/remacs-modules/examples/src/: lib.rs
rust_src/remacs-sys/: Cargo.toml  README.md  build.rs  lib.rs  libm.rs  wrapper.h
rust_src/remacs-util/: Cargo.toml  README.md  attributes.rs  lib.rs
rust_src/src/: alloc.rs  atimer.rs  atom.rs  base64.rs  base64_exports.rs  buffers.rs  buffers_exports.rs  bytecode.rs  callint.rs  callproc.rs  casefiddle.rs  casetab.rs  category.rs  category_exports.rs  character.rs  character_exports.rs  charset.rs  chartable.rs  chartable_exports.rs  cmds.rs  cmds_exports.rs  coding.rs  composite.rs  cons.rs  crypto.rs  data.rs  data_exports.rs  data_ffi.rs  decompress.rs  defvar.rs  dired.rs  dired_rust.rs  dired_unix.rs  dired_windows.rs  dispnew.rs  dispnew_exports.rs  editfns.rs  editfns_exports.rs  emacs.rs  eval.rs  (+90 more)
rust_src/src/crypto/: crypto_exports.rs  mod.rs  sha1.rs  sha1_ctx.rs
rust_src/src/webrender/: display_info.rs  font.rs  frame.rs  mod.rs  output.rs  term.rs
rust_src/src/webrender_backend/: channel.rs  color.rs  cursor.rs  display_info.rs  draw_canvas.rs  event.rs  font.rs  frame.rs  glyph.rs  keyboard.rs  mod.rs  output.rs  term.rs  texture.rs  util.rs
(+5531 files in other folders)
