[package]
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
name = "remacs"
description = "a Rust port of Emacs"
homepage = "https://github.com/Wilfred/remacs/"
repository = "https://github.com/Wilfred/remacs/"
license = "GPL-3.0"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.2"
remacs-sys = { version = "0.1.0", path = "remacs-sys/" }
remacs-lib = { version = "0.1.0", path = "remacs-lib/" }
remacs-macros = { version = "0.1.0", path = "remacs-macros" }
libc = "0.2"
rand = "0.3.15"
md5 = "0.3.5"
base64 = "0.6.0"
sha1 = "0.2.0"
sha2 = "0.4.2"

# Only want this local crate as dependency on Mac OS X
[target.'cfg(target_os = "macos")'.dependencies]
alloc_unexecmacosx = { version = "0.1.0", path = "alloc_unexecmacosx" }

[build-dependencies]
libc = "0.2"

[lib]
crate-type = ["staticlib"]

# Allow unwinding in functions called from C. See
# https://www.reddit.com/r/rust/comments/565q1f/wrote_a_blogpost_from_my_experiences_the_arduous/d8h053m/
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# Treat warnings as a build error on Travis.
strict = []
