[package]
name = "alloc_unexecmacosx"
version = "0.1.0"
authors = ["Felix S. Klock II <pnkfelix@pnkfx.org>"]

# Would be nice to do this, but saying "default-features = false"
# locally gets cancelled out by the other imports of libc globally.
# Instead we will just cut-and-paste type definitions (boo!).
#
# [dependencies]
# libc = { version = "0.2.17", default-features = false }
